[gd_scene load_steps=4 format=3 uid="uid://b8vs5ifvkuo7o"]

[ext_resource type="Script" path="res://Scripts/TitleScreen.gd" id="1_rh11d"]
[ext_resource type="AudioStream" uid="uid://dfa7sigc760x0" path="res://Sound/A Fishy Menu Draft 1.mp3" id="2_obqc2"]

[sub_resource type="LabelSettings" id="LabelSettings_mw1bu"]
font_size = 120
shadow_size = 2
shadow_color = Color(0, 0, 0, 1)

[node name="Title Node" type="Node2D"]
script = ExtResource("1_rh11d")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
follow_viewport_enabled = true

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BoxContainer" type="BoxContainer" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -144.5
offset_right = 150.0
offset_bottom = 144.5
grow_horizontal = 2
grow_vertical = 2
vertical = true

[node name="Title" type="Label" parent="CanvasLayer/Control/BoxContainer"]
custom_minimum_size = Vector2(218, 130)
layout_mode = 2
size_flags_vertical = 10
text = "fish."
label_settings = SubResource("LabelSettings_mw1bu")
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control/BoxContainer"]
layout_mode = 2
size_flags_vertical = 2
theme_override_constants/separation = 25

[node name="LoadGameButton" type="Button" parent="CanvasLayer/Control/BoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 30)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 24
text = "Load Game"

[node name="NewGameButton" type="Button" parent="CanvasLayer/Control/BoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 30)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 24
text = "New Game"

[node name="SettingsButton" type="Button" parent="CanvasLayer/Control/BoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 30)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 24
text = "Settings"

[node name="QuitButton" type="Button" parent="CanvasLayer/Control/BoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 30)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 24
text = "Quit"

[node name="TitleMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_obqc2")
autoplay = true
parameters/looping = true
